try to merge again