@@ -1,24 +1,28 @@
 package org.asamk.signal.dbus;
 
 import org.asamk.Signal;
+import org.asamk.signal.BaseConfig;
 import org.asamk.signal.manager.AttachmentInvalidException;
-import org.asamk.signal.manager.GroupId;
-import org.asamk.signal.manager.GroupNotFoundException;
 import org.asamk.signal.manager.Manager;
-import org.asamk.signal.manager.NotAGroupMemberException;
-import org.asamk.signal.storage.groups.GroupInfo;
+import org.asamk.signal.manager.groups.GroupId;
+import org.asamk.signal.manager.groups.GroupInviteLinkUrl;
+import org.asamk.signal.manager.groups.GroupNotFoundException;
+import org.asamk.signal.manager.groups.NotAGroupMemberException;
 import org.asamk.signal.util.ErrorUtils;
 import org.freedesktop.dbus.exceptions.DBusExecutionException;
-import org.whispersystems.libsignal.util.Pair;
+import org.whispersystems.libsignal.util.guava.Optional;
+import org.whispersystems.signalservice.api.groupsv2.GroupLinkNotActiveException;
 import org.whispersystems.signalservice.api.messages.SendMessageResult;
 import org.whispersystems.signalservice.api.push.SignalServiceAddress;
 import org.whispersystems.signalservice.api.util.InvalidNumberException;
 
+import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class DbusSignalImpl implements Signal {
 
@@ -40,23 +44,44 @@ public class DbusSignalImpl implements Signal {
 
     @Override
     public long sendMessage(final String message, final List<String> attachments, final String recipient) {
-        List<String> recipients = new ArrayList<>(1);
+        var recipients = new ArrayList<String>(1);
         recipients.add(recipient);
         return sendMessage(message, attachments, recipients);
+    }
+
+    private static void checkSendMessageResult(long timestamp, SendMessageResult result) throws DBusExecutionException {
+        var error = ErrorUtils.getErrorMessageFromSendMessageResult(result);
+
+        if (error == null) {
+            return;
+        }
+
+        final var message = timestamp + "\nFailed to send message:\n" + error + '\n';
+
+        if (result.getIdentityFailure() != null) {
+            throw new Error.UntrustedIdentity(message);
+        } else {
+            throw new Error.Failure(message);
+        }
     }
 
     private static void checkSendMessageResults(
             long timestamp, List<SendMessageResult> results
     ) throws DBusExecutionException {
-        List<String> errors = ErrorUtils.getErrorMessagesFromSendMessageResults(results);
+        if (results.size() == 1) {
+            checkSendMessageResult(timestamp, results.get(0));
+            return;
+        }
+
+        var errors = ErrorUtils.getErrorMessagesFromSendMessageResults(results);
         if (errors.size() == 0) {
             return;
         }
 
-        StringBuilder message = new StringBuilder();
+        var message = new StringBuilder();
         message.append(timestamp).append('\n');
         message.append("Failed to send (some) messages:\n");
-        for (String error : errors) {
+        for (var error : errors) {
             message.append(error).append('\n');
         }
 
@@ -66,7 +91,7 @@ public class DbusSignalImpl implements Signal {
     @Override
     public long sendMessage(final String message, final List<String> attachments, final List<String> recipients) {
         try {
-            final Pair<Long, List<SendMessageResult>> results = m.sendMessage(message, attachments, recipients);
+            final var results = m.sendMessage(message, attachments, recipients);
             checkSendMessageResults(results.first(), results.second());
             return results.first();
         } catch (InvalidNumberException e) {
@@ -79,9 +104,87 @@ public class DbusSignalImpl implements Signal {
     }
 
     @Override
+    public long sendRemoteDeleteMessage(
+            final long targetSentTimestamp, final String recipient
+    ) {
+        var recipients = new ArrayList<String>(1);
+        recipients.add(recipient);
+        return sendRemoteDeleteMessage(targetSentTimestamp, recipients);
+    }
+
+    @Override
+    public long sendRemoteDeleteMessage(
+            final long targetSentTimestamp, final List<String> recipients
+    ) {
+        try {
+            final var results = m.sendRemoteDeleteMessage(targetSentTimestamp, recipients);
+            checkSendMessageResults(results.first(), results.second());
+            return results.first();
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        } catch (InvalidNumberException e) {
+            throw new Error.InvalidNumber(e.getMessage());
+        }
+    }
+
+    @Override
+    public long sendGroupRemoteDeleteMessage(
+            final long targetSentTimestamp, final byte[] groupId
+    ) {
+        try {
+            final var results = m.sendGroupRemoteDeleteMessage(targetSentTimestamp, GroupId.unknownVersion(groupId));
+            checkSendMessageResults(results.first(), results.second());
+            return results.first();
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        } catch (GroupNotFoundException | NotAGroupMemberException e) {
+            throw new Error.GroupNotFound(e.getMessage());
+        }
+    }
+
+    @Override
+    public long sendMessageReaction(
+            final String emoji, final boolean remove, final String targetAuthor, final long targetSentTimestamp, final String recipient
+    ) {
+        var recipients = new ArrayList<String>(1);
+        recipients.add(recipient);
+        return sendMessageReaction(emoji, remove, targetAuthor, targetSentTimestamp, recipients);
+    }
+
+    @Override
+    public long sendMessageReaction(
+            final String emoji, final boolean remove, final String targetAuthor, final long targetSentTimestamp, final List<String> recipients
+    ) {
+        try {
+            final var results = m.sendMessageReaction(emoji, remove, targetAuthor, targetSentTimestamp, recipients);
+            checkSendMessageResults(results.first(), results.second());
+            return results.first();
+        } catch (InvalidNumberException e) {
+            throw new Error.InvalidNumber(e.getMessage());
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        }
+    }
+
+    @Override
+    public long sendNoteToSelfMessage(
+            final String message, final List<String> attachments
+    ) throws Error.AttachmentInvalid, Error.Failure, Error.UntrustedIdentity {
+        try {
+            final var results = m.sendSelfMessage(message, attachments);
+            checkSendMessageResult(results.first(), results.second());
+            return results.first();
+        } catch (AttachmentInvalidException e) {
+            throw new Error.AttachmentInvalid(e.getMessage());
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        }
+    }
+
+    @Override
     public void sendEndSessionMessage(final List<String> recipients) {
         try {
-            final Pair<Long, List<SendMessageResult>> results = m.sendEndSessionMessage(recipients);
+            final var results = m.sendEndSessionMessage(recipients);
             checkSendMessageResults(results.first(), results.second());
         } catch (IOException e) {
             throw new Error.Failure(e.getMessage());
@@ -93,9 +196,7 @@ public class DbusSignalImpl implements Signal {
     @Override
     public long sendGroupMessage(final String message, final List<String> attachments, final byte[] groupId) {
         try {
-            Pair<Long, List<SendMessageResult>> results = m.sendGroupMessage(message,
-                    attachments,
-                    GroupId.unknownVersion(groupId));
+            var results = m.sendGroupMessage(message, attachments, GroupId.unknownVersion(groupId));
             checkSendMessageResults(results.first(), results.second());
             return results.first();
         } catch (IOException e) {
@@ -108,10 +209,29 @@ public class DbusSignalImpl implements Signal {
     }
 
     @Override
+    public long sendGroupMessageReaction(
+            final String emoji, final boolean remove, final String targetAuthor, final long targetSentTimestamp, final byte[] groupId
+    ) {
+        try {
+            final var results = m.sendGroupMessageReaction(emoji, remove, targetAuthor, targetSentTimestamp, GroupId.unknownVersion(groupId));
+            checkSendMessageResults(results.first(), results.second());
+            return results.first();
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        } catch (InvalidNumberException e) {
+            throw new Error.InvalidNumber(e.getMessage());
+        } catch (GroupNotFoundException | NotAGroupMemberException e) {
+            throw new Error.GroupNotFound(e.getMessage());
+        }
+    }
+
+    // Since contact names might be empty if not defined, also potentially return
+    // the profile name
+    @Override
     public String getContactName(final String number) {
         try {
-            return m.getContactName(number);
-        } catch (InvalidNumberException e) {
+            return m.getContactOrProfileName(number);
+        } catch (Exception e) {
             throw new Error.InvalidNumber(e.getMessage());
         }
     }
@@ -145,9 +265,9 @@ public class DbusSignalImpl implements Signal {
 
     @Override
     public List<byte[]> getGroupIds() {
-        List<GroupInfo> groups = m.getGroups();
-        List<byte[]> ids = new ArrayList<>(groups.size());
-        for (GroupInfo group : groups) {
+        var groups = m.getGroups();
+        var ids = new ArrayList<byte[]>(groups.size());
+        for (var group : groups) {
             ids.add(group.getGroupId().serialize());
         }
         return ids;
@@ -155,7 +275,7 @@ public class DbusSignalImpl implements Signal {
 
     @Override
     public String getGroupName(final byte[] groupId) {
-        GroupInfo group = m.getGroup(GroupId.unknownVersion(groupId));
+        var group = m.getGroup(GroupId.unknownVersion(groupId));
         if (group == null) {
             return "";
         } else {
@@ -165,9 +285,9 @@ public class DbusSignalImpl implements Signal {
 
     @Override
     public List<String> getGroupMembers(final byte[] groupId) {
-        GroupInfo group = m.getGroup(GroupId.unknownVersion(groupId));
+        var group = m.getGroup(GroupId.unknownVersion(groupId));
         if (group == null) {
-            return Collections.emptyList();
+            return List.of();
         } else {
             return group.getMembers()
                     .stream()
@@ -192,9 +312,10 @@ public class DbusSignalImpl implements Signal {
             if (avatar.isEmpty()) {
                 avatar = null;
             }
-            final Pair<GroupId, List<SendMessageResult>> results = m.updateGroup(groupId == null
-                    ? null
-                    : GroupId.unknownVersion(groupId), name, members, avatar);
+            final var results = m.updateGroup(groupId == null ? null : GroupId.unknownVersion(groupId),
+                    name,
+                    members,
+                    avatar == null ? null : new File(avatar));
             checkSendMessageResults(0, results.second());
             return results.first().serialize();
         } catch (IOException e) {
@@ -211,5 +332,128 @@ public class DbusSignalImpl implements Signal {
     @Override
     public boolean isRegistered() {
         return true;
+    }
+
+    @Override
+    public void updateProfile(
+            final String name,
+            final String about,
+            final String aboutEmoji,
+            String avatarPath,
+            final boolean removeAvatar
+    ) {
+        try {
+            if (avatarPath.isEmpty()) {
+                avatarPath = null;
+            }
+            Optional<File> avatarFile = removeAvatar
+                    ? Optional.absent()
+                    : avatarPath == null ? null : Optional.of(new File(avatarPath));
+            m.setProfile(name, about, aboutEmoji, avatarFile);
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        }
+    }
+
+    // Provide option to query a version string in order to react on potential
+    // future interface changes
+    @Override
+    public String version() {
+        return BaseConfig.PROJECT_VERSION;
+    }
+
+    // Create a unique list of Numbers from Identities and Contacts to really get
+    // all numbers the system knows
+    @Override
+    public List<String> listNumbers() {
+        return Stream.concat(m.getIdentities().stream().map(i -> i.getAddress().getNumber().orNull()),
+                m.getContacts().stream().map(c -> c.number))
+                .filter(Objects::nonNull)
+                .distinct()
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<String> getContactNumber(final String name) {
+        // Contact names have precedence.
+        var numbers = new ArrayList<String>();
+        var contacts = m.getContacts();
+        for (var c : contacts) {
+            if (c.name != null && c.name.equals(name)) {
+                numbers.add(c.number);
+            }
+        }
+        // Try profiles if no contact name was found
+        for (var identity : m.getIdentities()) {
+            final var address = identity.getAddress();
+            var number = address.getNumber().orNull();
+            if (number != null) {
+                var profile = m.getRecipientProfile(address);
+                if (profile != null && profile.getDisplayName().equals(name)) {
+                    numbers.add(number);
+                }
+            }
+        }
+        return numbers;
+    }
+
+    @Override
+    public void quitGroup(final byte[] groupId) {
+        var group = GroupId.unknownVersion(groupId);
+        try {
+            m.sendQuitGroupMessage(group);
+        } catch (GroupNotFoundException | NotAGroupMemberException e) {
+            throw new Error.GroupNotFound(e.getMessage());
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        }
+    }
+
+    @Override
+    public void joinGroup(final String groupLink) {
+        try {
+            final var linkUrl = GroupInviteLinkUrl.fromUri(groupLink);
+            if (linkUrl == null) {
+                throw new Error.Failure("Group link is invalid:");
+            }
+            m.joinGroup(linkUrl);
+        } catch (GroupInviteLinkUrl.InvalidGroupLinkException | GroupLinkNotActiveException e) {
+            throw new Error.Failure("Group link is invalid: " + e.getMessage());
+        } catch (GroupInviteLinkUrl.UnknownGroupLinkVersionException e) {
+            throw new Error.Failure("Group link was created with an incompatible version: " + e.getMessage());
+        } catch (IOException e) {
+            throw new Error.Failure(e.getMessage());
+        }
+    }
+
+    @Override
+    public boolean isContactBlocked(final String number) {
+        var contacts = m.getContacts();
+        for (var c : contacts) {
+            if (c.number.equals(number)) {
+                return c.blocked;
+            }
+        }
+        return false;
+    }
+
+    @Override
+    public boolean isGroupBlocked(final byte[] groupId) {
+        var group = m.getGroup(GroupId.unknownVersion(groupId));
+        if (group == null) {
+            return false;
+        } else {
+            return group.isBlocked();
+        }
+    }
+
+    @Override
+    public boolean isMember(final byte[] groupId) {
+        var group = m.getGroup(GroupId.unknownVersion(groupId));
+        if (group == null) {
+            return false;
+        } else {
+            return group.isMember(m.getSelfAddress());
+        }
     }
 }
